Don't link against ntdllcrt
This caused issues with snprintf, leading to an invalid config.xml file.

--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -132,6 +132,9 @@ if(BC7_ISPC AND NOT ISPC_ARCH MATCHES "unknown")
             src/libchkstk.S)
         if(LLVM_PREFIX)
             set_source_files_properties(src/libchkstk.S PROPERTIES COMPILE_FLAGS "-DCHKSTK")
+            if(ISPC_ARCH MATCHES "x86" OR ISPC_ARCH MATCHES "x86-64")
+                set_source_files_properties(src/ge_compressor_bptc_bc7.cpp PROPERTIES COMPILE_FLAGS "-DLLVM_MINGW_FLTUSED")
+            endif()
         else()
             set_source_files_properties(src/libchkstk.S PROPERTIES COMPILE_FLAGS "-DCHKSTK -Wa,--no-pad-sections")
         endif()
@@ -150,10 +153,6 @@ if(BC7_ISPC)
 endif()
 
 target_link_libraries(graphics_engine ${SQUISH_LIBRARY})
-
-if(BC7_ISPC AND LLVM_PREFIX AND NOT ISPC_ARCH MATCHES "unknown")
-    target_link_libraries(graphics_engine ntdllcrt)
-endif()
 
 if(ENABLE_LIBASTCENC)
     target_link_libraries(graphics_engine ${LIBASTCENC_LIBRARY})
