--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build_switch:
     name: Build Switch
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-latest
     container:
       image: 'devkitpro/devkita64:20241023'
     steps:
