--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [depot-ubuntu-latest]
+        os: [depot-ubuntu-latest-4]
         compiler: [gcc, clang]
         build_type: [Debug, Release]
         server_only: [ON, OFF]
