--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: true
       matrix:
         arch: [i686, x86_64, armv7, aarch64]
-        os: [depot-windows-2022, depot-ubuntu-latest]
+        os: [depot-windows-2022-4, depot-ubuntu-latest-4]
         exclude:
           - arch: armv7
             os: windows-2022
