add text for splitscreen in help section

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -1,7 +1,6 @@
 [Desktop Entry]
 Name=SuperTuxKart
 Icon=supertuxkart
-StartupWMClass=supertuxkart
 #I18N: Generic name in desktop file entry, summary in AppData and short description in Google Play
 GenericName[ar]=لعبة سباق سيارات ثلاثية الأبعاد مفتوحة المصدر
 GenericName[be]=3D-гульня для гонак на картах з адкрытым зыходным кодам
@@ -9,7 +8,7 @@ GenericName[bg]=3-измерна състезателна игра с колич
 GenericName[ca]=Un joc de curses de karts en 3D de codi obert.
 GenericName[cs]=3D open source závodní hra motokár
 GenericName[cy]=Gêm rasio cart cod agored 3D
-GenericName[da]=Et 3D-kartracerspil i open source
+GenericName[da]=Et open source 3D-racerspil med karts
 GenericName[de]=Ein Open-Source 3D-Kart-Rennspiel
 GenericName[el]=Ενα 3D ανοιχτού κώδικα παιχνίδι  αγώνων με κάρτ 
 GenericName[eo]=3D-a malfermitkoda karta vetkurad-ludo
@@ -20,23 +19,23 @@ GenericName[fil]=Isang 3D at open-source na kart racing game.
 GenericName[fr]=Un jeu libre de course de karts en 3D
 GenericName[gd]=Geama rèisidh chartaichean 3D le bun-tùs fosgailte
 GenericName[gl]=Un xogo de carreiras de karts en 3D e de código aberto.
-GenericName[he]=משחק מֵרוצי מכוניות בתלת־ממד ובקוד פתוח
+GenericName[he]=משחק תלת־ממדי בקוד פתוח של מֵרוצי מכוניות
 GenericName[hu]=Egy 3D-s, nyílt forráskódú gokartverseny játék
 GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
 GenericName[it]=Un gioco open-source 3D di corse su kart
 GenericName[ja]=オープンソースな3Dレーシングカートゲーム
 GenericName[ko]=3D 오픈소스 카트 경주 게임
 GenericName[mk]=3D open-source тркачка картинг игра
-GenericName[ml]=ഒരു സ്വതന്ത്ര 3D കാർട്ട് റേസിംഗ് ഗെയിം
-GenericName[nl]=Een open source 3D kartracespel
+GenericName[ml]=ഒരു സ്വതന്ത്ര 3D കാർട്ട് റേസുകളി
+GenericName[nl]=Een opensource 3D-kartracespel
 GenericName[nn]=Eit racerspel i 3D med open kjeldekode
 GenericName[oc]=Un jòc de corsa de kart liure en 3D
 GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
-GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
+GenericName[pt]=Um jogo de karting de código aberto em 3D
 GenericName[pt_BR]=Corridas de kart em 3D e código aberto
-GenericName[ro]=Un joc de curse 3D open-source
+GenericName[ro]=Un joc open-source de curse 3D
 GenericName[ru]=Свободная трёхмерная гоночная игра на машинках
-GenericName[rue]=3х-мірна возикова перебігова бавка
+GenericName[rue]=3х-мірна возикова перебігова бавка из одкрытым зачаточным кодом
 GenericName[sk]=3D open-source závodná hra v štýle arkády
 GenericName[sl]=3D odprtokodna dirkalna igra
 GenericName[sr]=Игра тркања колицима слободног кода
@@ -82,9 +81,9 @@ Keywords[nl]=tux;game;race;spel;kart;super;auto;parcours;
 Keywords[nn]=tux;spel;billøp;racerspel;
 Keywords[oc]=tux;game;race;corsa;jòc;
 Keywords[pl]=tux;gra;wyścigi;
-Keywords[pt]=tux;jogo;corrida
+Keywords[pt]=tux;jogo;corrida;
 Keywords[pt_BR]=tux;jogo;corrida;
-Keywords[ro]=tux;joc;cursa
+Keywords[ro]=tux;game;race;joc;cursa;cursă;
 Keywords[ru]=такс;игра;гонка;
 Keywords[rue]=tux;бавка;гонитва;
 Keywords[sk]=tučniak;hra;závody;
